Improves bundles and externalize logs. Closes #137
This commit moves logback configuration out of the jar in conf/
This is achieved using -Dlogback.configurationFile in gatling.sh

Bundle now contains script examples

Gatling.sh has been improved :
 - GATLING_HOME is correctly set
 - The script can be launched from everywhere